# relation_coverage

./: README.md
Experiments/mems_gyro_hw/: mems_gyro.h
Experiments/mems_gyro_tp0/: irq.c  main  mems_gyro.c  test_package.c  test_package.h  watchdog.h
Experiments/mems_gyro_tp1/: Makefile  main  test_package.c
Experiments/mems_gyro_tp1.1/: bootstrap.S  main  test_package.c  test_package.h
Experiments/mems_gyro_tp2/: main  test_package.c  test_package.h
Experiments/mems_gyro_tp2.1/: irq.h  main  mems_gyro.h  test_package.c  watchdog.c
Experiments/mems_gyro_tp2.2/: main  main.c  mems_gyro.c  mems_gyro.h
Experiments/mems_gyro_tp2.3/: main  test_package.c  test_package.h
RelationCoverage/: .gitignore  UniCover.py  addressTranslation.py  configuration.py  coverageResults.py  coverageStructure.py  fileStructure.py  relationCoverage.py  reportGenerator.py  run_bare.sh  simulator.py
RelationCoverage/config/: coverage_bare_tp0.ccfg  coverage_bare_tp1.1.ccfg  coverage_bare_tp1.ccfg  coverage_bare_tp2.1.ccfg  coverage_bare_tp2.2.ccfg  coverage_bare_tp2.3.ccfg  coverage_bare_tp2.ccfg  relations_tp0.cover  relations_tp1.1.cover  relations_tp1.cover  relations_tp2.1.cover  relations_tp2.2.cover  relations_tp2.3.cover  relations_tp2.cover
RelationCoverage/coverage_simulator/: CMakeLists.txt  coverage_simulator.c
